/*
 * $Id: ChangeLog,v 1.3020 2004/06/04 09:40:19 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-06-04 14:00 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/debug/debugger.prg
    ! Clear and restore Inkey after- and before-blocks when in debugger.

2004-06-04 13:40 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * contrib/libct/screen2.prg
    ! Fixed SAYSCREEN().

2004-06-04 14:00 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * source/rtl/gtwvt/gtwvt.c
    ! Line 2797 should be pSymWVT_TIMER instead of pSymWVT_MOUSE.

2004-06-04 01:41 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/teditor.prg
    ! Fixed typo from ::ProcName to oSelf:ProcName.

2004-06-04 01:12 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/teditor.prg
  * source/rtl/memoedit.prg
    ! Send ProcName() and ProcLine() in SETKEY() procedure calls.

2004-05-28 20:26 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/exproptb.c
  * include/hbexprb.c
    + Added Clipper compatible warning when pushing element of an undeclared Array variable.

  * source/rtl/errorsys.prg
    ! Fixed spelling typo.

  * source/vm/arrays.c
  * source/vm/hvm.c
    ! Fixed preallocated size of szName, and szModuleName arguments to hb_procinfo().

  * utils/xbscript/xbs_harb.ch
  * utils/xbscript/xbscript.prg
    ! Fixed 1 todo.

2004-06-04 02:15 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/xhbgtmk.sh
    * xharbour CVS repsotiry address changed to:
      cvs.sourceforge.net:/cvsroot/xharbour

  * xharbour/include/hbapicdp.h
  * xharbour/source/rtl/cdpapi.c
    * new function to decode UTF-8 stream characters
      BOOL hb_cdpGetFromUTF8( PHB_CODEPAGE cdp, BYTE ch, int* n, USHORT* uc )

  * xharbour/source/rtl/gtsln/gtsln.c
  * xharbour/source/rtl/gtsln/gtsln.h